{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 68,
  "lineage": "e0d5c822-1a70-07a4-b06f-fb61398b7a98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2a7355b1e94bacc",
            "association_id": "eipassoc-0e2e240aa498cc348",
            "domain": "vpc",
            "id": "eipalloc-0f2a7355b1e94bacc",
            "instance": "i-098623f5a95faa861",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a38becf98eef47a9",
            "private_dns": "ip-172-16-47-180.ap-south-1.compute.internal",
            "private_ip": "172.16.47.180",
            "public_dns": "ec2-3-111-8-108.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.8.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "avincm_test_bastion_eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_bastion_eip",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1817852e157013a",
            "association_id": "eipassoc-08259bf082684c7a2",
            "domain": "vpc",
            "id": "eipalloc-0d1817852e157013a",
            "instance": "i-0325318d5725ca651",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e767e52023af7169",
            "private_dns": "ip-172-16-25-7.ap-south-1.compute.internal",
            "private_ip": "172.16.25.7",
            "public_dns": "ec2-43-205-149-10.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.149.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "avincm_test_frontend_eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_frontend_eip",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ba5c24fef103908",
            "association_id": "eipassoc-043bc27b6417c5b30",
            "domain": "vpc",
            "id": "eipalloc-05ba5c24fef103908",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08e152ee259657804",
            "private_dns": "ip-172-16-33-57.ap-south-1.compute.internal",
            "private_ip": "172.16.33.57",
            "public_dns": "ec2-13-235-175-101.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.175.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "avincm_test_natgw-eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_natgw-eip",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f621d90fa29f6d0",
            "arn": "arn:aws:ec2:ap-south-1:985010860775:instance/i-07bce0a2dadd0e34e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bce0a2dadd0e34e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avincm_mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2163b435827cdcf",
            "private_dns": "ip-172-16-148-154.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.148.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b9e4d9390f8186d3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a12b56c474d6f17e",
            "tags": {
              "Name": "avincm_test_backend_srv"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_backend_srv",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0558070746ed08cce"
            ]
          },
          "dependencies": [
            "aws_key_pair.sshkey",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.private_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f621d90fa29f6d0",
            "arn": "arn:aws:ec2:ap-south-1:985010860775:instance/i-098623f5a95faa861",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098623f5a95faa861",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avincm_mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a38becf98eef47a9",
            "private_dns": "ip-172-16-47-180.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.47.180",
            "public_dns": "ec2-3-111-8-108.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.8.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01fa78eb0411cd132",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b58bc676c5e2fbc",
            "tags": {
              "Name": "avincm_test_bastion_srv"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_bastion_srv",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffabddfc11ae44df"
            ]
          },
          "dependencies": [
            "aws_eip.bastion_eip",
            "aws_key_pair.sshkey",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f621d90fa29f6d0",
            "arn": "arn:aws:ec2:ap-south-1:985010860775:instance/i-0325318d5725ca651",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0325318d5725ca651",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avincm_mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e767e52023af7169",
            "private_dns": "ip-172-16-25-7.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.25.7",
            "public_dns": "ec2-43-205-149-10.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.149.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c78e8c28528b025f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003ea998887a75028",
            "tags": {
              "Name": "avincm_test_frontend_srv"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_frontend_srv",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a4457f9766bdba8"
            ]
          },
          "dependencies": [
            "aws_eip.frontend_eip",
            "aws_key_pair.sshkey",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:internet-gateway/igw-0a0dad2b5b99aea71",
            "id": "igw-0a0dad2b5b99aea71",
            "owner_id": "985010860775",
            "tags": {
              "Name": "avincm_test_igw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_igw",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ba5c24fef103908",
            "association_id": "eipassoc-043bc27b6417c5b30",
            "connectivity_type": "public",
            "id": "nat-0526a8a426a2c573c",
            "network_interface_id": "eni-08e152ee259657804",
            "private_ip": "172.16.33.57",
            "public_ip": "13.235.175.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b58bc676c5e2fbc",
            "tags": {
              "Name": "avincm_test_natgw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_natgw",
              "Owner": "aravind",
              "Project": "avincm"
            }
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:route-table/rtb-022e4c1272471514a",
            "id": "rtb-022e4c1272471514a",
            "owner_id": "985010860775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0526a8a426a2c573c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "avincm_test_private_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_private_rt",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_igw",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:route-table/rtb-016a1fc44f41039bf",
            "id": "rtb-016a1fc44f41039bf",
            "owner_id": "985010860775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0dad2b5b99aea71",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "avincm_test_public_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_public_rt",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c26e4bf4f676fe9",
            "route_table_id": "rtb-022e4c1272471514a",
            "subnet_id": "subnet-0b3dce67628963223"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_igw",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df05edd8de6632c1",
            "route_table_id": "rtb-022e4c1272471514a",
            "subnet_id": "subnet-0a12b56c474d6f17e"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_igw",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dddff7783972d46e",
            "route_table_id": "rtb-022e4c1272471514a",
            "subnet_id": "subnet-0ca3eec7fc1887872"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_igw",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7940d6ac4f5d1ff",
            "route_table_id": "rtb-016a1fc44f41039bf",
            "subnet_id": "subnet-003ea998887a75028"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08da56829b639874e",
            "route_table_id": "rtb-016a1fc44f41039bf",
            "subnet_id": "subnet-01b58bc676c5e2fbc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55bd858411b76c3",
            "route_table_id": "rtb-016a1fc44f41039bf",
            "subnet_id": "subnet-02d362e161964aca6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:security-group/sg-0558070746ed08cce",
            "description": "Allow 3306 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0558070746ed08cce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffabddfc11ae44df"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow ssh traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a4457f9766bdba8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "avincm_backend_sg",
            "name_prefix": "",
            "owner_id": "985010860775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "avincm_backend_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_backend_sg",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:security-group/sg-0ffabddfc11ae44df",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffabddfc11ae44df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "avincm_bastion_sg",
            "name_prefix": "",
            "owner_id": "985010860775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "avincm_bastion_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_bastion_sg",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:security-group/sg-03a4457f9766bdba8",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a4457f9766bdba8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffabddfc11ae44df"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "avincm_frontend_sg",
            "name_prefix": "",
            "owner_id": "985010860775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "avincm_frontend_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_frontend_sg",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-0b3dce67628963223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3dce67628963223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_private_subnet4"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_private_subnet4",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-0a12b56c474d6f17e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a12b56c474d6f17e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_private_subnet5"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_private_subnet5",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-0ca3eec7fc1887872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca3eec7fc1887872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_private_subnet6"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_private_subnet6",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-003ea998887a75028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003ea998887a75028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_public_subnet1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_public_subnet1",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-01b58bc676c5e2fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b58bc676c5e2fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_public_subnet2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_public_subnet2",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:subnet/subnet-02d362e161964aca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d362e161964aca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985010860775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avincm_test_public_subnet3"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_public_subnet3",
              "Owner": "aravind",
              "Project": "avincm"
            },
            "vpc_id": "vpc-01838b5abeb0bf140"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:985010860775:vpc/vpc-01838b5abeb0bf140",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-07e843b19ddbc9ddf",
            "default_route_table_id": "rtb-0a6cc506f6e5bc62c",
            "default_security_group_id": "sg-0b225948493ff5262",
            "dhcp_options_id": "dopt-0aba79693bec87fd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01838b5abeb0bf140",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6cc506f6e5bc62c",
            "owner_id": "985010860775",
            "tags": {
              "Name": "avincm_test_vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "avincm_test_vpc",
              "Owner": "aravind",
              "Project": "avincm"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}